--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,4 +16,5 @@ dependencies = [
     "sentence-transformers>=5.1.2",
     "streamlit>=1.51.0",
     "torch>=2.9.1",
+    "webdriver-manager>=4.0.2",
 ]
